Actividad de avatar agregada y carga de datos en menu principal

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
+        android:largeHeap="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -16,11 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".Activity_Menu_Principal"/>
-        <activity
-            android:name=".Activity_Nuevo_Usuario"/>
+        <activity android:name=".Activity_Menu_Principal" />
+        <activity android:name=".Activity_Nuevo_Usuario" />
+        <activity android:name=".Activity_Select_Avatar"></activity>
     </application>
 
 </manifest>
