--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion '26.0.2'
+    compileOptions.encoding "ISO-8859-1"
     defaultConfig {
         applicationId "koukin.llapanmi"
         minSdkVersion 19
